kubernetes/apps/vpn/vpn-gateway/app/ciliumnetworkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway
  namespace: vpn
  labels:
    app.kubernetes.io/instance: vpn-gateway
    app.kubernetes.io/name: vpn-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: vpn-gateway
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: '51820'
              protocol: UDP
    - toEntities:
        - cluster
